# django-mysql-compressed-fields

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: push-github-action.yml
mysql_compressed_fields/: __init__.py  fields.py  functions.py
tests/test_data/mysite/: mysql_compressed_fields
tests/test_data/mysite/ide/: models.py  tests.py
tests/test_data/mysite/ide/migrations/: 0001_initial.py
tests/test_data/mysite/mysite/: settings.py
